deploymentFront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: ibrahimkr/k8s-ingress-spring-angular-app:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu:  "200m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          imagePullPolicy: Always
