deploymentProductService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: app
          image: ibrahimkr/k8s-ingress-spring-product-service:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "200m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "128Mi"
          imagePullPolicy: Always
