deploymentUserService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
         - name: userservice
           image: ibrahimkr/k8s-ingress-spring-user-service:latest
           ports:
            - containerPort: 8080
           resources:
             requests:
               cpu: "200m"
               memory: "64Mi"
             limits:
               cpu: "300m"
               memory: "128Mi"
           imagePullPolicy: Always
