clusterIpUserService.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
