ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # rediriger tous les chemins vers le racine
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /userservice
            pathType: Prefix # la requete doit correspendre au debut comme le path donner // Exact il doit etre exactement comme le path donner
            backend:
              service:
                name: userservice
                port:
                  number: 8080
          - path: /productservice
            pathType: Prefix
            backend:
              service:
                name: productservice
                port:
                  number: 8081
          - path: /orderservice
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
                  # Cette règle "catch-all" redirige toutes les autres requêtes vers `angular-app`.
